# scitex-os

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  newb-docs-quality-on-ubuntu-latest.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml
docs/sphinx/: api.rst  conf.py
examples/: quickstart.py
src/scitex_os/: __init__.py  _check_host.py  _mv.py
src/scitex_os/_skills/scitex-os/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_os/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_os/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_os/_sphinx_html/.doctrees/api/: scitex_os.doctree
src/scitex_os/_sphinx_html/_modules/: index.html
src/scitex_os/_sphinx_html/_modules/scitex_os/: _check_host.html  _mv.html
src/scitex_os/_sphinx_html/_sources/: api.rst.txt  index.rst.txt
src/scitex_os/_sphinx_html/_sources/api/: scitex_os.rst.txt
src/scitex_os/_sphinx_html/api/: scitex_os.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_examples.py  test_smoke.py
tests/scitex_os/: test__check_host.py  test__mv.py
